2001-09-16  Katsuhiro Hermit Endo  <hermit@koka-in.org>

	* gnus-ja.texi (Drafts): Fix typo.

2001-09-11  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/gnus-art.el (gnus-request-article-this-buffer): Make a copy
	of the requested article only when the current directory does noe
	equal to `gnus-original-article-buffer'.

	* lisp/gnus-art.el (gnus-request-article-this-buffer): Copy an
	article from `gnus-original-article-buffer' to
	`gnus-article-buffer'.  Generate `gnus-original-article-buffer'
	safely.

2001-09-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-bbdb.el (gnus-bbdb/pop-up-bbdb-buffer): Use
	`bbdb-display-layout' or `bbdb-pop-up-display-layout' instead of
	`bbdb-elided-display' or `bbdb-pop-up-elided-display' when BBDB
	v2.33 or later is running.

2001-08-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-util.el (gnus-truncate-string): Abolished.

2001-08-18  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/nnshimbun.el (gnus-group-make-shimbun-group): Call
	`shimbun-groups' to detect avaiable groups of specified server.

2001-08-17  KANEMATSU Daiji  <kanematu@sra.co.jp>

	* lisp/message.el (message-signature-separator-for-insertion): New
	customizable variable which is used for signature separator.
	* lisp/message.el (message-insert-signature): Use variable
	`message-signature-separator-for-insertion' instead of hard code.

2001-08-15  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* texi/gnus-ja.texi (Browsing the Web): Fix typo.

2001-08-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-vers.el (gnus-revision-number): Increment to 05.

2001-08-10  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-art.el (gnus-request-article-this-buffer): Insert an
	article into `gnus-original-article-buffer' instead of
	`gnus-article-buffer'.

2001-07-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/gnus-sum.el (gnus-select-newsgroup): Don't examine cached
	articles with `gnus-cache-articles-in-group' even if the current